--- a/fontmachine.cfg
+++ b/fontmachine.cfg
@@ -16,5 +16,7 @@ charArray = [
 //Schablonenbuchstaben verwenden ja/nein
 cfgCutOut = true;
 
-//Definition der Skalierung - [1,1] entspricht 150*150mm
-scale([1,1])
+//Definition des LED-Abstandes in [mm]
+//Die Matrix ist auf 11*11 LEDs ausgelegt
+//Die Umrandung misst 2*cfgGridSize
+cfgGridSize=1;
