--- a/fontmachine.cfg
+++ b/fontmachine.cfg
@@ -1,4 +1,4 @@
-//Definition der Buchstaben
+//Definition of 121 characters
 charArray = [
 "E","S","R","I","S","C","H","M","F","Ü","F",
 "H","V","I","E","R","T","E","L","Z","Ä","H",
@@ -13,10 +13,9 @@ charArray = [
 "E","I","S","Z","W","O","I","D","R","Ü","Y"
 ];
 
-//Schablonenbuchstaben verwenden ja/nein
+//Enable or disable the cutout feature (true for lasercut, false for printing)
 cfgCutOut = true;
 
-//Definition des LED-Abstandes in [mm]
-//Die Matrix ist auf 11*11 LEDs ausgelegt
-//Die Umrandung misst 2*cfgGridSize
+//Set the distance between the LEDs in mm
+//The frontplate is 2*cfgGridSize larger all around
 cfgGridSize=10;
