Typo cleanup and improved docu

--- a/fm_config_default.cfg
+++ b/fm_config_default.cfg
@@ -1,3 +1,7 @@
+// @file fm_config_default.cfg
+// @author niederberger & ni-m
+// @brief  This file is a default config file for the fontmachine. Use this file as a template for your own config.cfg
+
 //Definition of 121 characters
 charArray = [
 "E","S","R","I","S","C","H","M","F","Ü","F",
